# homeassistant-agent

./: .env.example  .gitignore  AGENT.md  Dockerfile  docker-compose.yml  hacs.json  pyproject.toml
config/: sensors.yaml
custom_components/ha_energy_agent/: __init__.py  config_flow.py  const.py  coordinator.py  dashboard.py  discovery.py  frontend.py  manifest.json  models.py  sensor.py  services.yaml  strings.json  todo.py
custom_components/ha_energy_agent/analysis/: base.py  claude.py  openai_client.py  parser.py  prompts.py
custom_components/ha_energy_agent/processing/: history.py
custom_components/ha_energy_agent/translations/: en.json
custom_components/ha_energy_agent/www/: ha-energy-agent-card.js
src/ha_agent/: __init__.py  agent.py  config.py  main.py  models.py
src/ha_agent/analysis/: __init__.py  claude.py  parser.py  prompts.py
src/ha_agent/ha/: __init__.py  client.py  history.py  notify.py
src/ha_agent/ui/: __init__.py  web.py
tests/: conftest.py  test_discovery.py  test_history.py  test_parser.py  test_prompts.py  test_providers.py
