[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ha-energy-agent"
version = "1.0.0"
description = "HA Energy Agent — AI-powered Home Assistant energy optimisation custom component"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["custom_components/ha_energy_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
